--- a/.env.production
+++ b/.env.production
@@ -8,12 +8,12 @@ LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
-DB_CONNECTION=mysql
-DB_HOST=your-db-host
-DB_PORT=3306
-DB_DATABASE=your-db-name
-DB_USERNAME=your-db-user
-DB_PASSWORD=your-db-password
+DB_CONNECTION=pgsql
+DB_HOST=dbsina2025_db_host  # Replace with actual value
+DB_PORT=5432
+DB_DATABASE=dbsina2025       # Replace with actual value
+DB_USERNAME=dbsina2025_user  # Replace with actual value
+DB_PASSWORD=your_db_password # Replace with actual value
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
